// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addLayer no layer is selected 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
└── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }
└── <Rectangle> Rectangle { x: 450, y: 450, w: 100, h: 100 }"
`;

exports[`addLayer original layer is in parent layer 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
└── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 450, y: 450, w: 100, h: 100 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
└── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }"
`;

exports[`addLayer selected layer is a group 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
└── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
└── <Group> Group { x: 0, y: 0, w: 150, h: 150 }
    ├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
    ├── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }
    └── <Rectangle> Rectangle { x: 450, y: 450, w: 100, h: 100 }"
`;

exports[`addLayer some layer is selected 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }
├── <Text> Text { x: 0, y: 0, w: 0, h: 0 }
└── <Rectangle> Rectangle { x: 100, y: 100, w: 100, h: 100 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 450, y: 450, w: 100, h: 100 }
├── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }
├── <Text> Text { x: 0, y: 0, w: 0, h: 0 }
└── <Rectangle> Rectangle { x: 100, y: 100, w: 100, h: 100 }"
`;

exports[`deleteLayer delete multiple bad nesting 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Group> Group { x: 0, y: 0, w: 0, h: 0 }
│   └── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
└── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
└── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }"
`;

exports[`deleteLayer delete multiple within different parents 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Group> Group { x: 0, y: 0, w: 0, h: 0 }
│   └── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
└── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
└── <Group> Group { x: 0, y: 0, w: 0, h: 0 }"
`;

exports[`deleteLayer delete multiple within same parent 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Group> Group { x: 0, y: 0, w: 0, h: 0 }
│   └── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
└── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }"
`;

exports[`duplicateLayer duplicate multiple 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
└── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
├── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }
├── <Rectangle> Rectangle Copy { x: 0, y: 0, w: 100, h: 100 }
└── <Oval> Oval Copy { x: 50, y: 50, w: 100, h: 100 }"
`;

exports[`duplicateLayer duplicate multiple in different parents 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
└── <Artboard> Artboard { x: 0, y: 0, w: 0, h: 0 }
    └── <Text> Text { x: 0, y: 0, w: 0, h: 0 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
├── <Rectangle> Rectangle Copy { x: 0, y: 0, w: 100, h: 100 }
└── <Artboard> Artboard { x: 0, y: 0, w: 0, h: 0 }
    ├── <Text> Text { x: 0, y: 0, w: 0, h: 0 }
    └── <Text> Text Copy { x: 0, y: 0, w: 0, h: 0 }"
`;

exports[`duplicateLayer duplicate multiple with gap 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
├── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }
├── <Artboard> Artboard { x: 0, y: 0, w: 0, h: 0 }
└── <Text> Text { x: 0, y: 0, w: 0, h: 0 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
├── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }
├── <Artboard> Artboard { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle Copy { x: 0, y: 0, w: 100, h: 100 }
├── <Artboard> Artboard Copy { x: 100, y: 0, w: 0, h: 0 }
└── <Text> Text { x: 0, y: 0, w: 0, h: 0 }"
`;

exports[`duplicateLayer duplicate one 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
└── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
└── <Rectangle> Rectangle Copy { x: 0, y: 0, w: 100, h: 100 }"
`;

exports[`grouping Group & ungroup layers 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Bottom { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 100, y: 100, w: 100, h: 100 }
├── <Oval> Oval { x: 250, y: 250, w: 100, h: 100 }
└── <Rectangle> Top { x: 0, y: 0, w: 0, h: 0 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Bottom { x: 0, y: 0, w: 0, h: 0 }
├── <Group> Group { x: 100, y: 100, w: 250, h: 250 }
│   ├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
│   └── <Oval> Oval { x: 150, y: 150, w: 100, h: 100 }
└── <Rectangle> Top { x: 0, y: 0, w: 0, h: 0 }"
`;

exports[`grouping Group & ungroup layers 2`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Bottom { x: 0, y: 0, w: 0, h: 0 }
├── <Group> Group { x: 100, y: 100, w: 250, h: 250 }
│   ├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
│   └── <Oval> Oval { x: 150, y: 150, w: 100, h: 100 }
└── <Rectangle> Top { x: 0, y: 0, w: 0, h: 0 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Bottom { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 100, y: 100, w: 100, h: 100 }
├── <Oval> Oval { x: 250, y: 250, w: 100, h: 100 }
└── <Rectangle> Top { x: 0, y: 0, w: 0, h: 0 }"
`;

exports[`grouping Group & ungroup nested layers 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
└── <Artboard> Artboard { x: 100, y: 100, w: 300, h: 300 }
    ├── <Rectangle> Bottom { x: 0, y: 0, w: 0, h: 0 }
    ├── <Rectangle> Rectangle { x: 100, y: 100, w: 100, h: 100 }
    ├── <Oval> Oval { x: 250, y: 250, w: 100, h: 100 }
    └── <Rectangle> Top { x: 0, y: 0, w: 0, h: 0 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
└── <Artboard> Artboard { x: 100, y: 100, w: 300, h: 300 }
    ├── <Rectangle> Bottom { x: 0, y: 0, w: 0, h: 0 }
    ├── <Group> Group { x: 100, y: 100, w: 250, h: 250 }
    │   ├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
    │   └── <Oval> Oval { x: 150, y: 150, w: 100, h: 100 }
    └── <Rectangle> Top { x: 0, y: 0, w: 0, h: 0 }"
`;

exports[`grouping Group & ungroup nested layers 2`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
└── <Artboard> Artboard { x: 100, y: 100, w: 300, h: 300 }
    ├── <Rectangle> Bottom { x: 0, y: 0, w: 0, h: 0 }
    ├── <Group> Group { x: 100, y: 100, w: 250, h: 250 }
    │   ├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
    │   └── <Oval> Oval { x: 150, y: 150, w: 100, h: 100 }
    └── <Rectangle> Top { x: 0, y: 0, w: 0, h: 0 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
└── <Artboard> Artboard { x: 100, y: 100, w: 300, h: 300 }
    ├── <Rectangle> Bottom { x: 0, y: 0, w: 0, h: 0 }
    ├── <Rectangle> Rectangle { x: 100, y: 100, w: 100, h: 100 }
    ├── <Oval> Oval { x: 250, y: 250, w: 100, h: 100 }
    └── <Rectangle> Top { x: 0, y: 0, w: 0, h: 0 }"
`;

exports[`grouping Ungroup multiple groups 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
├── <Group> Group { x: 0, y: 0, w: 0, h: 0 }
│   ├── <Rectangle> 1 { x: 0, y: 0, w: 0, h: 0 }
│   └── <Rectangle> 2 { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Middle { x: 0, y: 0, w: 0, h: 0 }
├── <Group> Group { x: 0, y: 0, w: 0, h: 0 }
│   ├── <Rectangle> 3 { x: 0, y: 0, w: 0, h: 0 }
│   └── <Rectangle> 4 { x: 0, y: 0, w: 0, h: 0 }
└── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
├── <Rectangle> 1 { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> 2 { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Middle { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> 3 { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> 4 { x: 0, y: 0, w: 0, h: 0 }
└── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }"
`;

exports[`moveLayer move multiple inside 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
├── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }
└── <Group> Group { x: 0, y: 0, w: 0, h: 0 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
└── <Group> Group { x: 0, y: 0, w: 150, h: 150 }
    ├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
    └── <Oval> Oval { x: 50, y: 50, w: 100, h: 100 }"
`;

exports[`moveLayer move one above 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
└── <Group> Group { x: 0, y: 0, w: 0, h: 0 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Group> Group { x: 0, y: 0, w: 0, h: 0 }
└── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }"
`;

exports[`moveLayer move one below 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
└── <Group> Group { x: 0, y: 0, w: 0, h: 0 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Group> Group { x: 0, y: 0, w: 0, h: 0 }
└── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }"
`;

exports[`moveLayer move one inside 1`] = `
"<Page> Page { x: 0, y: 0, w: 0, h: 0 }
├── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }
└── <Group> Group { x: 0, y: 0, w: 0, h: 0 }

<Page> Page { x: 0, y: 0, w: 0, h: 0 }
└── <Group> Group { x: 0, y: 0, w: 100, h: 100 }
    └── <Rectangle> Rectangle { x: 0, y: 0, w: 100, h: 100 }"
`;
